new structure for folders, remove handler add controlles, add login controller and jwt service, add service bcrypt and services folder/package, add middlewares folder and middleware auth initial, All changes are released initially to sample future changes
